update actuator node and index

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -142,6 +142,13 @@
       <span class="switch-inner"></span>
     </label>
     </div>
+        <div class="switch8">
+        <span>Humidifire 1</span>
+        <input type="checkbox" name="switch" class="switch-checkbox" onclick="humidifier1_control()" id="switch8" >
+        <label class="switch-label" for="switch8">
+          <span class="switch-inner"></span>
+        </label>
+      </div>
     </div>
     </div>
     <div class="panel-footer">
