update the dashboard

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -156,48 +156,20 @@
     </div>
   </div>
   </div>
-  <div class="col-sm-2">
-  <div class="panel panel-primary">
-    <div class="panel-heading">MQTT Topics</div>
-    <div class="list-group">
-      <a href="#" class="list-group-item">
-        <h4 class="list-group-item-heading">/green/temp </h4>
-        <p id = "real_temp" class="list-group-item-text">graph_temp</p>
-      </a>
-      <a href="#" class="list-group-item">
-        <h4 class="list-group-item-heading">/green/hum </h4>
-        <p id = "real_hum" class="list-group-item-text">graph_hum</p>
-      </a>
-      <a href="#" class="list-group-item">
-        <h4 class="list-group-item-heading">/green/soil </h4>
-        <p id = "real_soil" class="list-group-item-text">graph_soil</p>
-      </a>
-      <a href="#" class="list-group-item">
-        <h4 class="list-group-item-heading">/green/light </h4>
-        <p id = "real_light" class="list-group-item-text">graph_light</p>
-      </a>
-      <a href="#" class="list-group-item active">
-        <h4 class="list-group-item-heading">/green/fan </h4>
-        <p id = "real_light" class="list-group-item-text">OFF</p>
-      </a>
-      <a href="#" class="list-group-item active">
-        <h4 class="list-group-item-heading">/green/motor </h4>
-        <p id = "real_light" class="list-group-item-text">OFF</p>
-      </a>
-    </div>
-  </div>
-  </div>
+
   <div class="col-lg-8">
     <div class="panel panel-success">
       <div class="panel-heading">
         Building Status
       </div>
       <div class="panel-body">
-        <div style="width: 600px; height: 400px; margin: 0 auto">
+        <div style="width: 900px; height: 400px; margin: 0 auto">
           <div id="container-speed" style="width: 300px; height: 200px; float: left"></div>
           <div id="container-rpm" style="width: 300px; height: 200px; float: left"></div>
           <div id="container-speed1" style="width: 300px; height: 200px; float: left"></div>
           <div id="container-rpm1" style="width: 300px; height: 200px; float: left"></div>
+          <div id="container-externalTemperature" style="width: 300px; height: 200px; float: left"></div>
+          <div id="container-externalHumidity" style="width: 300px; height: 200px; float: left"></div>
         </div>
       </div>
       <div class="panel-footer">
