--- a/server/public/home.html
+++ b/server/public/home.html
@@ -177,7 +177,7 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="training.html">Training Details</a>
+                        <a href="neuralNetwork.html">Training Details</a>
                     </li>
                     <li>
                         <a href="tables.html"></i>Help</a>
