--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+git <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -77,7 +77,7 @@
         <!-- /.nav-second-level -->
         </li>
         <li>
-          <a href="training.html">Training Details</a>
+          <a href="neuralNetwork.html">Training Details</a>
         </li>
         <li>
           <a href="tables.html"></i>Help</a>
